# Rescue-Operator

./: .gitignore  README.md  pyproject.toml
config/: default.yaml
scripts/: README_WINDOWS.md  start_windows.bat  start_windows.ps1
src/: main.py
src/rescue_operator/: __init__.py  agents.py  config.py  connectors.py  dispatcher.py  env.py  main.py  models.py  safety.py  simulator.py  storage.py  training.py  ui.py  vision.py  watchdog.py
tests/: test_core.py
