[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rescue-operator-ai"
version = "0.1.0"
description = "Autonomous Rescue Operator simulation, browser connector, and AI agents"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2",
  "PyYAML>=6",
  "numpy>=1.24",
  "gymnasium>=0.29",
  "stable-baselines3>=2.0",
  "ortools>=9.8",
  "PySide6>=6.6",
  "playwright>=1.45",
  "Pillow>=10",
  "pytesseract>=0.3",
]

[project.scripts]
rescue-operator-ai = "rescue_operator.main:main"

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
